refactor(接口测试): 优化停止逻辑